添加用户头像上传功能;
